# exception-logging

./: .gitignore  LICENSE  OLD_make_README.py  README.md  TODO  main.py  make_README.py  pypi.sh  pyproject.toml  requirements.txt  setup.cfg  test.py
exception_logger/: main.py  main.pyi
src/exceptlog/: main.py
src/exlog/: __init__.py  example.py  exceptlog.py
tests/: test.py  test2.py  test_cls.py  test_logger.py  test_meta.py
