[metadata]
name = exceptlog-pkg-yrom1
version = 0.0.5
author = yrom1
description = exception logging decorator
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yrom1/exception-logging-decorator
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    mypy_extensions
    backports.zoneinfo; python_version < "3.9"

[options.packages.find]
where = src
